# tutoTDD_PCA

./: README.rst  pyproject.toml
PCA/: PCA.py  data.csv  firstPCA.py
src/: PCA.py  firstPCA.py
tests/: unit_tests.py
